tests/jsx_pragma/line_comment_unknown_id_points_to_pragma_1.js
// @jsx Foo['Bar']
// error
var Bar = 123;
<Bar />;
